# fastapi_ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  dependabot-auto-merge.yml  manual-trivy-scan.yml
.junie/: AGENTS.md
.skills/: README.md  celery.md  codereview.md  fastapi.md  tdd.md
app/: main.py
app/api/: api_v1.py  deps.py
app/api/v1/: health.py  login.py  users.py
app/core/: config.py  logging.py  security.py
app/crud/: user.py
app/db/: session.py
app/models/: user.py
migrations/: env.py
migrations/versions/: 5de1cc68fc33_initial_migration.py
tests/: conftest.py  test_health.py  test_login.py  test_root.py  test_users.py
