[project]
name = "fastapi-ai-base"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.24",
    "aiosqlite>=0.22.1",
    "loguru>=0.7.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
