[project]
name = "fastapi-ai-base"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.24",
    "aiosqlite>=0.22.1",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-argument
]
ignore = [
    "E501",  # line too long, handled by black/ruff-format
    "B008",  # do not perform function calls in argument defaults (FastAPI depends)
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for NOW
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
